--- a/src/index.css
+++ b/src/index.css
@@ -787,3 +787,65 @@ img {
 route {
   text-decoration: none;
 }
+
+.seablue {
+  width: 64px;
+  height: 64px;
+  justify-content: center;
+  display: flex;
+}
+
+.ptop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  border: 1px solid #cbc9c9;
+}
+
+.tral {
+  margin: 40px 0px;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+}
+
+.green {
+  color: #48cc8c;
+  font-size: 14px;
+}
+
+.dark {
+  color: #393869;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.text > p {
+  text-align: center;
+}
+
+.text {
+  margin-top: 30px;
+}
+
+.containerHold {
+  border: 1px solid #cbc9c9;
+  margin-top: 55px;
+  margin-bottom: 60px;
+  border-radius: 10px;
+
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+.pHold {
+  margin: 64px 53px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
